--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
+    "@types/dom-speech-recognition": "^0.0.6",
     "@types/node": "^24.0.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
